--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "php": "^8.1",
         "codeigniter4/framework": "^4.0",
         "codeigniter4/translations": "^4.0",
-        "eftec/bladeone": "^4.5"
+        "eftec/bladeone": "^4.5",
+        "twbs/bootstrap": "^5.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
