--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ### Environment Files ###
 # These should never be under version control,
 # as it poses a security risk.
-.env
+# .env
 .vagrant
 Vagrantfile
 **/images
